# ClapAdditiveSynth

./: .gitmodules  CMakeLists.txt  README.md
include/: AddSyn.h  PartialOsc.h  constants.h  constants.h.in
src/: AddSyn.cpp  PartialOsc.cpp  entry.cpp
